# web_contest

./: .gitignore  pyproject.toml  requirements.txt
apps/contest/: admin.py  apps.py  models.py  urls.py  views.py
apps/contest/migrations/: 0001_initial.py  0002_alter_contestmodel_slug.py  0003_alter_contestmodel_name.py
apps/survey/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/survey/migrations/: 0001_initial.py  0002_alter_resultmodel_table_alter_surveymodel_table.py  0003_surveymodel_name.py  0004_alter_resultmodel_survey.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_organization_remove_participantmodel_kindergarten_and_more.py  0003_alter_participantmodel_organization_type.py  0004_alter_participantmodel_organization.py  0005_alter_customusermodel_phone.py
assets/main/css/: about.css  competition.css  contact.css  main.css  reult.css  work.css
root/: settings.py  urls.py
templates/: about.html  competition.html  confirm_email.html  contact.html  contest_detail.html  email_send.html  login.html  mail_body.html  main.html  profile.html  registration.html  result.html  survey.html  work.html
templates/layouts/: base.html  footer.html  navbar.html
